refactor: transition from anemic records to a rich domain model
- Converted `Exam`, `StudentProfile`, and `StudyPlan` from records to classes to properly encapsulate their internal states and collections (defensive copying).
- Moved `calculateBaseImportance` logic from `ImportanceCalculator` service directly into the `Exam` entity, adhering to DDD principles for Aggregate Roots.
- Moved `violatesConstraints` logic from `Individual` directly into `StudyPlan` as `meetsMinimumConstraints`, centralizing validation logic.
- Added subjective personalization logic directly into `StudentProfile` (`getKnowledgeGapFactor`, `applyKnowledgeGapFactor`).
- Updated all mappers, services, and GA components to utilize the new encapsulated methods and getters.
- Added defensive unmodifiable list wrapping in the `ThematicAxis` record constructor to prevent `EI_EXPOSE_REP` vulnerability.

Co-authored-by: gustavo-rm <40838146+gustavo-rm@users.noreply.github.com>