@@ -9,11 +9,10 @@ import java.util.Map;
  * Represents the chromosome: a complete allocation of study days for each subject.
  * This class is an immutable value object. Once a StudyPlan is created, it cannot be changed,
  * which ensures the integrity of the genetic algorithm's solutions.
- *
- * @param daysPerSubject A map where each Subject is associated with the total number of days
- * allocated for its study.
  */
-public record StudyPlan(Map<Subject, Integer> daysPerSubject) {
+public class StudyPlan {
+
+    private final Map<Subject, Integer> daysPerSubject;
 
     /**
      * The canonical constructor for StudyPlan.
@@ -23,8 +22,12 @@ public record StudyPlan(Map<Subject, Integer> daysPerSubject) {
      * @param daysPerSubject The map of subjects to allocated study days.
      */
     public StudyPlan(Map<Subject, Integer> daysPerSubject) {
-        // We wrap the map to make it unmodifiable, ensuring the record is deeply immutable.
-        this.daysPerSubject = Collections.unmodifiableMap(daysPerSubject);
+        // We wrap the map to make it unmodifiable, ensuring the object is deeply immutable.
+        this.daysPerSubject = daysPerSubject == null ? Map.of() : Collections.unmodifiableMap(daysPerSubject);
+    }
+
+    public Map<Subject, Integer> getDaysPerSubject() {
+        return daysPerSubject;
     }
 
     /**
@@ -46,5 +49,23 @@ public record StudyPlan(Map<Subject, Integer> daysPerSubject) {
         return this.daysPerSubject.values().stream()
                 .mapToInt(Integer::intValue)
                 .sum();
+    }
+
+    /**
+     * Checks if the plan satisfies all provided minimum day constraints.
+     * This brings validation logic out of the GA framework and into the domain object itself.
+     *
+     * @param minimumDaysPerSubject The map of constraints.
+     * @return {@code true} if all constraints are met, {@code false} if at least one is violated.
+     */
+    public boolean meetsMinimumConstraints(Map<Subject, Integer> minimumDaysPerSubject) {
+        for (Map.Entry<Subject, Integer> entry : daysPerSubject.entrySet()) {
+            int allocatedDays = entry.getValue();
+            int minimumDays = minimumDaysPerSubject.getOrDefault(entry.getKey(), 1);
+            if (allocatedDays < minimumDays) {
+                return false; // Found a violation.
+            }
+        }
+        return true; // No violations found.
     }
 }
